--- a/client-todo-list/src/app/app.html
+++ b/client-todo-list/src/app/app.html
@@ -1,17 +1,17 @@
 
 
-<h2>Create a note</h2>
+<h2>Create a task</h2>
 <form (ngSubmit)="submit()">
-  <input [(ngModel)]="note.title" name="title" placeholder="Title" required />
+  <input [(ngModel)]="task.title" name="title" placeholder="Title" required />
   <br />
-  <textarea [(ngModel)]="note.content" name="content" placeholder="Content" required></textarea>
+  <textarea [(ngModel)]="task.content" name="content" placeholder="Content" required></textarea>
   <br />
   <button type="submit">Create</button>
 </form>
 
-<h2>List of notes</h2>
+<h2>List of Tasks</h2>
 <ul>
-  <li *ngFor="let n of notes">
+  <li *ngFor="let n of tasks">
     <strong>{{ n.title }}</strong> — {{ n.content }}
   </li>
 </ul>
