--- a/client-todo-list/src/app/app.html
+++ b/client-todo-list/src/app/app.html
@@ -8,7 +8,7 @@
 <h2>List of Tasks</h2>
 <ul>
   <li *ngFor="let n of tasks">
-    <strong>{{ n.title }}</strong> — {{ n.content }}
+    <strong>{{ n.title }}</strong> — {{ n.content }}— {{ n.completed }}
   </li>
 </ul>
 
