--- a/client-todo-list/src/app/app.css
+++ b/client-todo-list/src/app/app.css
@@ -38,3 +38,20 @@ li {
   margin-bottom: 1rem;
   border-radius: 6px;
 }
+
+.btn-blue {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+
+.btn-grey {
+  background-color: #cccccc;
+  color: black;
+  border: none;
+  padding: 6px 12px;
+  cursor: not-allowed;
+}
+
