--- a/client-todo-list/src/app/app.html
+++ b/client-todo-list/src/app/app.html
@@ -8,7 +8,13 @@
 <h2>List of Tasks</h2>
 <ul>
   <li *ngFor="let n of tasks">
-    <strong>{{ n.title }}</strong> — {{ n.content }}— {{ n.completed }}
+    <strong>{{ n.title }}</strong> — {{ n.content }} — {{ n.completed }}
+
+    <button
+      [ngClass]="n.completed ? 'btn-grey' : 'btn-blue'"
+      (click)="n.completed ? removeTaskFromCompleted(n) : setTaskCompleted(n)">
+      {{ n.completed ? 'Remove from completed' : 'Set Completed' }}
+    </button>
   </li>
 </ul>
 
