--- a/client-todo-list/src/app/app.html
+++ b/client-todo-list/src/app/app.html
@@ -1,7 +1,17 @@
 <h2>Create a Task</h2>
 <form (ngSubmit)="submit()">
+
   <input [(ngModel)]="task.title" name="title" placeholder="Title" required />
+
   <textarea [(ngModel)]="task.content" name="content" placeholder="Content" required></textarea>
+
+  <select [(ngModel)]="task.importance" name="importance" required>
+    <option value="" disabled selected>Select Importance</option>
+    <option value="Low">Low</option>
+    <option value="Medium">Medium</option>
+    <option value="High">High</option>
+  </select>
+
   <button type="submit">Create</button>
 </form>
 
