--- a/client-todo-list/src/app/app.html
+++ b/client-todo-list/src/app/app.html
@@ -1,25 +1,26 @@
 <h2>Create a Task</h2>
-<form (ngSubmit)="submit()">
+<div class="form-panel">
+  <form (ngSubmit)="submit()">
+    <input [(ngModel)]="task.title" name="title" placeholder="Title" required />
 
-  <input [(ngModel)]="task.title" name="title" placeholder="Title" required />
+    <textarea [(ngModel)]="task.content" name="content" placeholder="Content" required></textarea>
 
-  <textarea [(ngModel)]="task.content" name="content" placeholder="Content" required></textarea>
+    <select [(ngModel)]="task.importance" name="importance" required>
+      <option value="" disabled selected>Select Importance</option>
+      <option value="Low">Low</option>
+      <option value="Medium">Medium</option>
+      <option value="High">High</option>
+    </select>
 
-  <select [(ngModel)]="task.importance" name="importance" required>
-    <option value="" disabled selected>Select Importance</option>
-    <option value="Low">Low</option>
-    <option value="Medium">Medium</option>
-    <option value="High">High</option>
-  </select>
+    <button type="submit">Create</button>
 
-  <button type="submit">Create</button>
-</form>
+  </form>
+</div>
 
 <h2>List of Tasks</h2>
 <ul>
   <li *ngFor="let n of tasks">
-    <strong>{{ n.title }}</strong> — {{ n.content }} — {{ n.completed }}  — {{ n.importance }}
-
+    <strong>{{ n.title }}</strong> — {{ n.content }} — {{ n.completed }} — {{ n.importance }}
     <button
       [ngClass]="n.completed ? 'btn-grey' : 'btn-blue'"
       (click)="n.completed ? removeTaskFromCompleted(n) : setTaskCompleted(n)">
