--- a/client-todo-list/src/app/app.html
+++ b/client-todo-list/src/app/app.html
@@ -12,6 +12,15 @@
       <option value="High">High</option>
     </select>
 
+    <label for="dueDate">Due Date:</label>
+    <input
+      type="datetime-local"
+      [(ngModel)]="task.dueDate"
+      name="dueDate"
+      id="dueDate"
+    />
+
+
     <button type="submit">Create</button>
 
   </form>
