--- a/client-todo-list/src/app/app.html
+++ b/client-todo-list/src/app/app.html
@@ -29,7 +29,7 @@
 <h2>List of Tasks</h2>
 <ul>
   <li *ngFor="let n of tasks">
-    <strong>{{ n.title }}</strong> — {{ n.content }} — {{ n.completed }} — {{ n.importance }} —  {{ getRelativeDate(n.dateCreation) }}—  {{ getRelativeDueDate(n.dueDate) }}
+    <strong>{{ n.title }}</strong> — {{ n.content }} — {{ n.completed }} — {{ n.importance }} —  {{ getRelativeDate(n.dateCreation ?? '') }}—  {{ getRelativeDueDate(n.dueDate ?? '') }}
     <button
       [ngClass]="n.completed ? 'btn-grey' : 'btn-blue'"
       (click)="n.completed ? removeTaskFromCompleted(n) : setTaskCompleted(n)">
