--- a/client-todo-list/src/app/app.html
+++ b/client-todo-list/src/app/app.html
@@ -14,13 +14,11 @@
 
     <label for="dueDate">Due Date:</label>
     <input
-      type="datetime-local"
+      type="date"
       [(ngModel)]="task.dueDate"
       name="dueDate"
-      id="dueDate"
+      required
     />
-
-
     <button type="submit">Create</button>
 
   </form>
@@ -29,7 +27,7 @@
 <h2>List of Tasks</h2>
 <ul>
   <li *ngFor="let n of tasks">
-    <strong>{{ n.title }}</strong> — {{ n.content }} — {{ n.completed }} — {{ n.importance }} —  {{ getRelativeDate(n.dateCreation ?? '') }}—  {{ getRelativeDueDate(n.dueDate ?? '') }}
+    <strong>{{ n.title }}</strong> — {{ n.content }} — {{ n.completed }} — {{ n.importance }} —  {{ getRelativeDate(n.dateCreation ?? '') }}—  {{ getRelativeDueDate(n.dueDate) }}
     <button
       [ngClass]="n.completed ? 'btn-grey' : 'btn-blue'"
       (click)="n.completed ? removeTaskFromCompleted(n) : setTaskCompleted(n)">
