--- a/client-todo-list/src/app/app.html
+++ b/client-todo-list/src/app/app.html
@@ -26,13 +26,21 @@
 
 <h2>List of Tasks</h2>
 <ul>
-  <li *ngFor="let n of tasks">
-    <strong>{{ n.title }}</strong> — {{ n.content }} — {{ n.completed }} — {{ n.importance }} —  {{ getRelativeDate(n.dateCreation ?? '') }}—  {{ getRelativeDueDate(n.dueDate) }}
-    <button
-      [ngClass]="n.completed ? 'btn-grey' : 'btn-blue'"
-      (click)="n.completed ? removeTaskFromCompleted(n) : setTaskCompleted(n)">
-      {{ n.completed ? 'Remove from completed' : 'Set Completed' }}
-    </button>
+  <li *ngFor="let n of tasks" style="display: flex; align-items: center; justify-content: space-between;">
+    <div style="display: flex; align-items: center; gap: 10px;">
+      <button
+        [ngClass]="n.completed ? 'btn-grey' : 'btn-blue'"
+        (click)="n.completed ? removeTaskFromCompleted(n) : setTaskCompleted(n)">
+        {{ n.completed ? 'Set Not completed' : 'Set Completed' }}
+      </button>
+      <span>
+        <strong>{{ n.title }} : </strong> {{ n.content }} <br>
+        <strong> Importance : </strong> {{ n.importance }} <br>
+        <strong> Created : </strong> {{ getRelativeDate(n.dateCreation ?? '') }}<br>
+        <strong> Due in : </strong> {{ getRelativeDueDate(n.dueDate) }}
+      </span>
+    </div>
+    <button class="btn-red" (click)="deleteTask(n)">Delete Task</button>
   </li>
 </ul>
 
