--- a/client-todo-list/src/app/app.html
+++ b/client-todo-list/src/app/app.html
@@ -17,13 +17,17 @@
         {{ n.completed ? '❌' : '✅' }}
       </button>
       <span>
-        <strong>{{ n.title }} : </strong> {{ n.content }} <br>
-        <strong> Importance : </strong> {{ n.importance }} <br>
-        <strong> Created </strong> {{ getRelativeDate(n.dateCreation ?? '') }}<br>
-        <strong> Due  </strong> {{ getRelativeDate(n.dueDate) }}
-      </span>
+      <strong>{{ n.title }} : </strong> {{ n.content }} <br>
+      <strong> Importance : </strong> {{ n.importance }} <br>
+      <strong> Created </strong> {{ getRelativeDate(n.dateCreation ?? '') }}<br>
+      <strong> Due  </strong> {{ getRelativeDate(n.dueDate) }}
+    </span>
     </div>
-    <button class="btn-delete" (click)="deleteTask(n)"> 🗑️</button>
+
+    <div>
+      <button class="btn-edit" (click)="openEditPopup(n)">✏️</button>
+      <button class="btn-delete" (click)="deleteTask(n)">🗑️</button>
+    </div>
   </li>
 </ul>
 
