--- a/client-todo-list/src/app/app.css
+++ b/client-todo-list/src/app/app.css
@@ -15,8 +15,9 @@ body {
   padding: 2rem;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  max-width: 500px;
+  width: 30%;
+  max-width: 30%;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -86,8 +87,9 @@ button:hover {
 ul {
   list-style-type: none;
   padding: 0;
-  width: 100%;
-  max-width: 600px;
+  width: 30%;
+  max-width: 30%;
+  margin: 0 auto;
 }
 
 li {
