--- a/client-todo-list/src/app/app.html
+++ b/client-todo-list/src/app/app.html
@@ -42,7 +42,8 @@
       (formSubmit)="updateTask($event)"
       (cancel)="closeEditPopup()"
     ></app-task-form>
-    <button (click)="closeEditPopup()">Cancel</button>
+    <br>
+    <button  class="btn-cancel" (click)="closeEditPopup()">Cancel</button>
   </div>
 </div>
 
