--- a/client-todo-list/src/app/app.html
+++ b/client-todo-list/src/app/app.html
@@ -8,28 +8,50 @@
 </div>
 
 <h2>List of Tasks</h2>
-<ul>
-  <li *ngFor="let n of tasks" style="display: flex; align-items: center; justify-content: space-between;">
-    <div style="display: flex; align-items: center; gap: 10px;">
-      <button
-        [ngClass]="n.completed ? 'btn-grey' : 'btn-blue'"
-        (click)="n.completed ? removeTaskFromCompleted(n) : setTaskCompleted(n)">
-        {{ n.completed ? '❌' : '✅' }}
-      </button>
-      <span>
-      <strong>{{ n.title }} : </strong> {{ n.content }} <br>
-      <strong> Importance : </strong> {{ n.importance }} <br>
-      <strong> Created </strong> {{ getRelativeDate(n.dateCreation ?? '') }}<br>
-      <strong> Due  </strong> {{ getRelativeDate(n.dueDate) }}
-    </span>
-    </div>
+<div style="background: #f0f0f0; border-radius: 10px; width: 40%;margin: 1% auto; padding: 10px;">
 
-    <div>
-      <button class="btn-edit" (click)="openEditPopup(n)">✏️</button>
-      <button class="btn-delete" (click)="deleteTask(n)">🗑️</button>
-    </div>
-  </li>
-</ul>
+  <div style="margin-bottom: 15px; display: flex; gap: 10px;">
+    <label>
+      Sort by:
+      <select [(ngModel)]="sortBy" (change)="sortTasks()">
+        <option value="dueDate">Due date</option>
+        <option value="dateCreation">Creation date</option>
+      </select>
+    </label>
+
+    <label>
+      Order:
+      <select [(ngModel)]="sortOrder" (change)="sortTasks()">
+        <option value="asc">Ascending</option>
+        <option value="desc">Descending</option>
+      </select>
+    </label>
+  </div>
+
+
+  <ul>
+    <li *ngFor="let n of tasks" style="display: flex; align-items: center; justify-content: space-between;">
+      <div style="display: flex; align-items: center; gap: 10px;">
+        <button
+          [ngClass]="n.completed ? 'btn-grey' : 'btn-blue'"
+          (click)="n.completed ? removeTaskFromCompleted(n) : setTaskCompleted(n)">
+          {{ n.completed ? '❌' : '✅' }}
+        </button>
+        <span>
+        <strong>{{ n.title }} : </strong> {{ n.content }} <br>
+        <strong> Importance : </strong> {{ n.importance }} <br>
+        <strong> Created </strong> {{ getRelativeDate(n.dateCreation ?? '') }}<br>
+        <strong> Due  </strong> {{ getRelativeDate(n.dueDate) }}
+      </span>
+      </div>
+
+      <div>
+        <button class="btn-edit" (click)="openEditPopup(n)">✏️</button>
+        <button class="btn-delete" (click)="deleteTask(n)">🗑️</button>
+      </div>
+    </li>
+  </ul>
+</div>
 
 
 <div *ngIf="showEditPopup" class="popup-overlay">
