create importance and title sort

--- a/client-todo-list/src/app/app.html
+++ b/client-todo-list/src/app/app.html
@@ -16,6 +16,8 @@
       <select [(ngModel)]="sortBy" (change)="sortTasks()">
         <option value="dueDate">Due date</option>
         <option value="dateCreation">Creation date</option>
+        <option value="importance">Importance</option>
+        <option value="title">Task Name</option>
       </select>
     </label>
 
