--- a/client-todo-list/src/app/task-form/task-form.html
+++ b/client-todo-list/src/app/task-form/task-form.html
@@ -3,7 +3,7 @@
   <textarea [(ngModel)]="task.content" name="content" placeholder="Content" required></textarea>
 
   <select [(ngModel)]="task.importance" name="importance" required>
-    <option value="" disabled>Select Importance</option>
+    <option value="Low" disabled>Select Importance</option>
     <option value="Low">Low</option>
     <option value="Medium">Medium</option>
     <option value="High">High</option>
