--- a/client-todo-list/src/app/app.css
+++ b/client-todo-list/src/app/app.css
@@ -117,7 +117,7 @@ li {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
